Update index.html to test paragraph tags

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ian Avant's Digital Resume</title>
 </head>
 <body>
-    
+    <h1>Ian Avant's Digital Resume</h1>
+    <p>
+        Ian Avant is pursuing a Bachelors of Science in Electrical Engineering at Mississippi State University.
+    </p>
 </body>
 </html>
