Added "unordered list" to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <h1>Ian Avant's Digital Resume</h1>
     <p>
         Ian Avant is pursuing a Bachelors of Science in Electrical Engineering at Mississippi State University.
+        He has the following relevant job skills:
+        <ul>
+            <li>Experience in C++, Python, MATLAB, and TensorFlow.</li>
+            <li>Knowledge of electrical circuit design and high-voltage systems.</li>
+            <li>Expertise in Microsoft Office software.</li>
+        </ul>
     </p>
 </body>
 </html>
